[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/UI/hammer_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://src/UI/Build_List.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Action_Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/UI/water_button_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/UI/hammer_button_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/UI/water_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://src/UI/Info_Panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/UI/hammer_button_disabled.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/UI/sickle_button_normal.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/UI/water_button_disabled.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/UI/sickle_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/UI/sickle_button_disabled.png" type="Texture" id=12]

[node name="ActionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 87.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 97.0
margin_bottom = 39.0
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 32.0

[node name="BuildButton" type="TextureButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 25.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_disabled = ExtResource( 8 )

[node name="WaterButton" type="TextureButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 10 )

[node name="HarvestButton" type="TextureButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 25.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildList" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 82.0
margin_bottom = 64.0

[node name="InfoPanel" parent="VBoxContainer" instance=ExtResource( 7 )]
visible = false
margin_top = 50.0
margin_right = 82.0
margin_bottom = 64.0

[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/BuildButton" to="." method="_on_BuildButton_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/WaterButton" to="." method="_on_WaterButton_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/HarvestButton" to="." method="_on_HarvestButton_toggled"]
